Examples/CIS673/Assignment/part1and2.output
liangchengyu@susumus-Air Assignment % spin -run -f part1and2.pml
warning: unknown warning option '-Wformat-overflow=0'; did you mean '-Wshift-overflow'? [-Wunknown-warning-option]
1 warning generated.
ltl invariant: (([] (! (((process[0]@crit)) && ((process[1]@crit))))) && ([] (<> ((process[0]@crit))))) && ([] (<> ((process[1]@crit))))
warning: unknown warning option '-Wformat-overflow=0'; did you mean '-Wshift-overflow'? [-Wunknown-warning-option]
1 warning generated.
Depth=    8355 States=    1e+06 Transitions= 1.98e+06 Memory=   151.386	t=     0.34 R=   3e+06
error: max search depth too small
Depth=    9999 States=    2e+06 Transitions= 4.93e+06 Memory=   185.663	t=     0.93 R=   2e+06

(Spin Version 6.5.1 -- 3 June 2021)
	+ Partial Order Reduction

Full statespace search for:
	never claim         	+ (invariant)
	assertion violations	+ (if within scope of claim)
	acceptance   cycles 	+ (fairness enabled)
	invalid end states	- (disabled by never claim)

State-vector 36 byte, depth reached 9999, errors: 0
  2025511 states, stored (2.94495e+06 visited)
  5044452 states, matched
  7989403 transitions (= visited+matched)
        0 atomic steps
hash conflicts:    181883 (resolved)

Stats on memory usage (in Megabytes):
  123.627	equivalent memory usage for states (stored*(State-vector + overhead))
   92.985	actual memory usage for states (compression: 75.21%)
         	state-vector as stored = 20 byte + 28 byte overhead
  128.000	memory used for hash table (-w24)
    0.534	memory used for DFS stack (-m10000)
  221.405	total actual memory usage


unreached in proctype process
	part1and2.pml:33, state 13, "-end-"
	(1 of 13 states)
unreached in claim invariant
	_spin_nvr.tmp:18, state 24, "-end-"
	(1 of 24 states)

pan: elapsed time 1.59 seconds
pan: rate 1852170.4 states/second
